# partial_inspector

./: LICENSE  PartialInspector  PartialInspector.cabal  PartialSpy.cabal  README.md  run.sh
src/: Makefile  NetBeans.hs  PartialInspector.hs  PartialSpy.hs  index.html  run.sh
src/Types/: API.hs  Action.hs  RailsEvent.hs  Request.hs
src/js/: helpers.js  highlight.pack.js
